# libpythonpro2-alison

./: .travis.yml  README.md  github_api.py  pyproject.toml  setup.py
libpythonpro2/: github_api.py
libpythonpro2/spam/: db.py
libpythonpro2/tests/test_spam/: conftest.py  test_enviador_de_email.py  test_envio_para_base_de_usuarios.py  test_github_api.py  test_usuarios.py
